# Vinted-Notifications

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  db.py  docker-compose.yml  pyproject.toml  vinted_notifications.py
.github/workflows/: sync-and-deploy.yml
rss_feed_plugin/: rss_db.py  rss_feed.py
